Fix for the white box flash due to height being set to auto on the bootstrap collapse

--- a/_sass/core/nav.scss
+++ b/_sass/core/nav.scss
@@ -998,3 +998,7 @@ li.dropdown.menu.active.open > a {
 
     }
 }
+// Bug fix for the White box flash 
+#navbar-collapse {
+    height: 100% !important;
+}
